Add coldest & hottest weighted snapshots